# kde-watereffect

./: CMakeLists.txt  DEP  INSTALL  README  watereffect.cpp  watereffect.desktop  watereffect.h  watereffect_config.cpp  watereffect_config.desktop  watereffect_config.h  watereffect_config.ui
